# zodiac-horoscope-cli

./: LICENSE  README.md  pyproject.toml
scripts/: python_setup.sh  run.sh
zodiac_horoscope/: zodiac_horoscope.py
